Cleanup, fix spacing & text styles (#6)

--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -74,5 +74,6 @@ body {
   font-size: 40px;
   font-weight: 790;
   margin: 0;
-  text-align:center;
+  text-align: center;
+  text-transform: uppercase;
 }
